--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "gulpfile.babel.js",
   "dependencies": {
     "bourbon": "^4.2.7",
+    "es6-promise": "^4.0.5",
+    "isomorphic-fetch": "^2.2.1",
     "normalize.css": "^4.2.0"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
     "ignore-styles": "^5.0.1",
+    "isomorphic-style-loader": "^1.1.0",
     "jsdom": "^9.5.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.10.0",
@@ -34,6 +37,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^4.0.2",
     "sinon": "^1.17.6",
     "style-loader": "^0.13.1",
@@ -45,9 +49,8 @@
     "test": "mocha --recursive --require babel-register --require ignore-styles || true",
     "test:watch": "mocha --watch --recursive --require babel-register --require ignore-styles || true",
     "build": "NODE_ENV=production webpack -p --progress",
-    "server": "babel-register ./src/server",
-    "start": "npm run build && npm run server",
-    "dev": "webpack-dev-server"
+    "dev": "NODE_ENV=development babel-register ./src/server",
+    "start": "npm run build && babel-register ./src/server"
   },
   "author": "",
   "license": "ISC"
