--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.18.0",
     "babel-register-cli": "^2.0.1",
     "body-parser": "^1.15.2",
     "css-loader": "^0.25.0",
@@ -23,8 +24,8 @@
     "enzyme": "^2.4.1",
     "expect": "^1.20.2",
     "express": "^4.13.4",
+    "express-minify-html": "^0.9.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.22.0",
     "ignore-styles": "^5.0.1",
     "isomorphic-style-loader": "^1.1.0",
     "jsdom": "^9.5.0",
@@ -32,7 +33,6 @@
     "node-sass": "^3.10.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "react": "^15.1.0",
-    "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.1.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
@@ -48,9 +48,9 @@
   "scripts": {
     "test": "mocha --recursive --require babel-register --require ignore-styles || true",
     "test:watch": "mocha --watch --recursive --require babel-register --require ignore-styles || true",
-    "build": "NODE_ENV=production webpack -p --progress",
-    "dev": "NODE_ENV=development babel-register ./src/server",
-    "start": "npm run build && babel-register ./src/server"
+    "build": "webpack -p --progress",
+    "dev": "NODE_ENV=development nodemon start",
+    "start": "NODE_ENV=production npm run build && nodemon start"
   },
   "author": "",
   "license": "ISC"
