--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "build": "NODE_ENV=production webpack -p --progress",
     "serve:dev": "NODE_ENV=development nodemon start",
     "serve:prod": "NODE_ENV=production nodemon start",
-    "dev": "NODE_ENV=development && npm run serve:dev",
+    "dev": "NODE_ENV=development && rm -rf public && npm run serve:dev",
     "start": "NODE_ENV=production npm run build && npm run serve:prod"
   },
   "author": "",
